--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,8 @@
     <header>
         <h1>Finstagram</h1>
     </header>
-    <main role=""main">
+    <main role="main">
+
         <article class="finstagram-post">
             <div class="user-info">
               <img src="https://live.staticflickr.com/65535/52358606250_01c667c5da_w.jpg" alt="sharky_j">
@@ -26,11 +27,37 @@
               </li>
             </ul>
           </article>
+
+          <article class="finstagram-post">
+            <div class="user-info">
+              <img src="https://live.staticflickr.com/65535/52358415933_0a0e6bc35f_3k.jpg" alt="marlin_peppa">
+              <h2>marlin_peppa</h2>
+              <h3>3 hours ago</h3>
+            </div>
+            <a class="photo" href="#">
+              <img src="https://live.staticflickr.com/65535/52358494794_f88b160d15_4k.jpg" alt="finstagram post from marlin_peppa">
+            </a>
+            <div class="actions">
+              0 likes
+              <span class="comment-count">0 comments</span>
+            </div>
+            <ul class="comments">
+              <li>
+                <p>
+                  marlin_peppa: lunchtime! ;)
+                </p>
+              </li>
+            </ul>
+          </article>
     </main>
     <head>
         <link rel="stylesheet" href="../../../stylesheets/normalize.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../../../stylesheets/lib.css">
+        <link rel="stylesheet" type="text/css" href="../../../stylesheets/app.css">
         <title>Finstagram</title>
       </head>
 
